<resources>
    <string name="app_name">SeatingPlan</string>
    <string name="menu_tablelayout">Table Layout</string>
    <string name="menu_tableplan">Table Plan</string>
    <string name="menu_about">About Us</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>


    <string name="table1">Table 1</string>
    <string name="table2">Table 2</string>
    <string name="table3">Table 3</string>
    <string name="table4">Table 4</string>
    <string name="table5">Table 5</string>
    <string name="table6">Table 6</string>
    <string name="table7">Table 7</string>
    <string name="table8">Table 8</string>
    <string name="toptable">Top Table</string>

    <string name="seat">Make a Plan</string>
    <string name="loginbtn">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>

    <string name="entermessage">Please Enter Your Guests Names</string>
    <string name="tableno">Table No.</string>
    <string name="number">Number</string>
    <string name="name">Name</string>

    <string name="aboutus">Seating Plan</string>
    <string name="aboutus_message">Welcome To Seating Plan\n\nWhere You Can Keep Track of All Your Guests\n\nAttending Your Event</string>
    <string name="loading">Please wait while we load your Seating Plan..</string>

    <string name="editnames">Please Edit List of Names Below</string>
    <string name="save">Save</string>

    <string name="nav_header">Navigation Header</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="action_plan">Table Plan</string>
    <string name="guests">Guests</string>
    <string name="deletebtn">Delete Button</string>

    <string name="welcome">Welcome to Seating Plan</string>

    <string name="action_about">About Us</string>
    <string name="action_home">Home</string>
    <string name="action_tablelayout">Table Layout</string>
    <string name="action_tableplan">Table Plan</string>


</resources>