<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tablelayout"
            android:icon="@drawable/ic_menu_tablelayout"
            android:title="@string/menu_tablelayout" />
        <item
            android:id="@+id/nav_tableplan"
            android:icon="@drawable/ic_menu_tableplan"
            android:title="@string/menu_tableplan" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>


</menu>